# hr-assistant-progetto-5-6

./: .gitignore  README.md  pyproject.toml
hr_assistant/: __init__.py  config.py  custom_embedding.py  database.py  document_processor.py  semantic_chunking.py  utils.py
resumes/: curriculum-controllo-di-gestione.txt  curriculum-data-scientist.txt  curriculum-fullstack-developer.txt  curriculum-marketing.txt  curriculum-software-engineer.txt  curriculum-ux-designer.txt  curriculum_cybersecurity.txt
