[project]
name = "hr-assistant-progetto-5-6"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Scaccetti",email = "scaccettif@gmail.com"}
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "openai (>=2.36.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "chainlit (>=2.11.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
