[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Scaccetti",email = "scaccettif@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [

    "openai (>=1.59.9,<2.0.0)",
    "ollama (>=0.4.6,<0.5.0)",
    "chainlit (>=2.0.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "langchain-openai (>=0.3.2,<0.4.0)",
    "chromadb (>=1.5.9,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
