[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Scaccetti",email = "scaccettif@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "chromadb (>=1.5.9,<2.0.0)",
    "openai (>=2.36.0,<3.0.0)",
    "chainlit (==2.4.1)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
    
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
